cmake_minimum_required(VERSION 3.15.3)
project(Leetcode_everyday)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode_everyday 20_VaildParentheses_20210914.cpp 162_FindPeakElement_20210915.cpp 27_RemoveElement_20210916.cpp 53_MaximunSubarray_20210917.cpp 48_RotateImage_20220711.cpp 1252_CellsWithOddValuesInAMatrix_20220712.cpp 731_MyCalendarII_20220718.cpp 1260_Shift2DGrid_20220719.cpp)